# wordle-assistant

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: cd-deploy.yml  cf-worker-deploy.yml  cf-worker.yml  ci-pr.yml  rust-wrangler-ci.yml  rust.yml  wordle-assistant.yml
cf-worker/: Cargo.toml  README.md  wrangler.toml
cf-worker/src/: index.html  lib.rs
data/: 5-letter_frequencies.csv
docs/: Wordle-Assistant.yaml
src/: choice.rs  choice_order.rs  cli.rs  lib.rs  main.rs  recommendation_api.rs  word_list.rs  wordle.rs
